# tools-management

./: .env  biome.json  components.json  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
src/: main.tsx  route-tree.gen.ts
src-tauri/: .env  Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  tools.rs  users.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250414_111301_create_users_table.rs  m20250505_130154_create_tools_table.rs
src-tauri/migrations/: 0000_init.sql  0001_seed-users.sql
src-tauri/migrations/meta/: 0000_snapshot.json  _journal.json
src-tauri/service/: Cargo.toml
src-tauri/service/src/: mutation.rs  query.rs
src-tauri/service/tests/: mock.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: token.rs
src/components/: command-menu.tsx  login-form.tsx  search.tsx  table-columns.tsx  theme-switch.tsx
src/components/data-table/: data-table-action-bar.tsx  data-table-advanced-toolbar.tsx  data-table-column-header.tsx  data-table-date-filter.tsx  data-table-faceted-filter.tsx  data-table-filter-list.tsx  data-table-filter-menu.tsx  data-table-pagination.tsx  data-table-range-filter.tsx  data-table-skeleton.tsx  data-table-slider-filter.tsx  data-table-sort-list.tsx  data-table-toolbar.tsx  data-table-view-options.tsx  data-table.tsx
src/components/layout/: app-sidebar.tsx  header.tsx  main.tsx  nav-group.tsx  nav-user.tsx  team-switcher.tsx
src/components/shared/: auto-schedule.tsx  index.tsx
src/components/ui/: alert.tsx  (+31 more)
src/db/: index.ts  migrate.ts
src/hooks/: index.ts  use-auth.ts  use-data-table.ts  use-search.ts  use-theme.ts
src/libs/: composition.ts  format.ts  utils.ts
src/providers/: index.tsx  query-client-provider.tsx  router-with-context-provider.tsx  search-provider.tsx  sidebar-provider.tsx  theme-provider.tsx
src/routes/: __root.tsx  _app.tsx
src/styles/: global.css
src/types/: class.ts  data-table.ts  degree.ts  experiment.ts  group.ts  index.ts  schedule.ts  schedules-tools.ts  student.ts  tool.ts
(+78 files in other folders)
