[package]
name = "tools-management"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mahdi Samavi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tools_management_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.17.0"
dirs = "6.0.0"

tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.97"
dotenvy = "0.15.7"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "=0.8.2", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
chrono = "0.4.40"
jsonwebtoken = "9.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = [".", "service", "entity", "migration"]
